@@ -463,6 +463,63 @@ def putLattice(fname, **kwargs):
     putPvData(fname, machines._lat.name, **kwargs)
 
 
+def measKickedTbtData(idriver, ampl, **kwargs):
+    """
+    idriver - 3 or 4, i.e. injection kicker 3 or 4. vertical pinger is 5
+    ampl - [kV for kicker or pinger]
+    """
+    verbose = kwargs.get("verbose", 0)
+    output = kwargs.get("output", True)
+    kpvsp, kpvrb = None, None
+
+    if idriver in [3, 4]:
+        kpvsp = 'SR:IS-PS{Kick:%d}V-Sp' % idriver
+        kpvrb = 'SR:IS-PS{Kick:%d}Hvps-V-Rb-1st' % idriver
+        kpvon = 'SR:IS-PS{Kick:%d}HvpsOnOff_Cmd' % idriver
+    elif idriver in [5,]:
+        kpvsp = 'SR:C21-PS{Pinger:V}V-Sp'
+        kpvrb = 'SR:C21-PS{Pinger:V}Setpoint-Rb.VALA'
+        kpvon = 'SR:C21-PS{Pinger:V}HvpsOnOff_Cmd'
+
+    caput(kpvsp, 0.0)
+    for i in range(100):
+        if caget(kpvrb, count=1) < 0.001: break
+        time.sleep(1)
+    caput(kpvon, 1)
+
+    #(name, x, y, Isum, ts, offset), output = ap.nsls2.getSrBpmData(
+    #    trig=1, count=5000, output=True, h5group="k_%d" % idriver)
+    h5g = "k_%d" % idriver
+    Idcct0 = caget('SR:C03-BI{DCCT:1}I:Total-I')
+    time.sleep(2)
+
+    # request an injection:
+    caput('ACC-TS{EVG-SSC}Request-Sel', 1)
+    time.sleep(3)
+    Idcct1 = caget('SR:C03-BI{DCCT:1}I:Total-I')
+    (name, x, y, Isum, ts, offset), output = getSrBpmData(
+        trig=1, count=2000, output=output, h5group=h5g)
+
+    #if verbose > 0:
+    #    print ts
+
+    caput(kpvon, 0)
+    caput(kpvsp, 0.0)
+
+    f = h5py.File(output)
+    g = f[h5g]
+    g["I"]  = Idcct1
+    g["I"].attrs["dI"] = Idcct1 - Idcct0
+    g["RF_SP"] = float(caget('RF{Osc:1}Freq:SP'))
+    g["RF_I"]  = float(caget('RF{Osc:1}Freq:I'))
+    g.attrs["ampl"]  = ampl
+    g.attrs["idriver"] = idriver
+    g.attrs["pvsp"] = kpvsp
+    g.attrs["pvrb"] = kpvrb
+    g.attrs["pvon"] = kpvon
+    f.close()
+
+
 def plotChromaticity(f, nu, chrom):
     """
     see measChromaticity
